add new listelement

--- a/etherpad/src/plugins/langTag/templates/langTagTagSelectors.ejs
+++ b/etherpad/src/plugins/langTag/templates/langTagTagSelectors.ejs
@@ -1,7 +1,7 @@
 <% helpers.includeCss("plugins/langTag/langTag.css"); %>
 <a href="javascript:void(0)" title="Select language" onclick="langTag.langTagClicked();"><img src="/static/html/plugins/langTag/editbar_langtag.gif"></a>
 <div id="langTag-language-selector">
-  <ul>
+  <ul id="cites">
    <li><a href="javascript:void(0)" onclick="langTag.langTagSelectLangClicked('TEST');">Afaraf</a></li>
   </ul>
 </div>
