--- a/etherpad/src/plugins/langTag/templates/langTagTagSelectors.ejs
+++ b/etherpad/src/plugins/langTag/templates/langTagTagSelectors.ejs
@@ -2,6 +2,6 @@
 <a href="javascript:void(0)" title="Select language" onclick="langTag.langTagClicked();"><img src="/static/html/plugins/langTag/editbar_langtag.gif"></a>
 <div id="langTag-language-selector">
   <ul id="cites">
-   <li><a href="javascript:void(0)" onclick="langTag.langTagSelectLangClicked('[1]');">Afaraf</a></li>
+   <li><a href="javascript:void(0)" onclick="langTag.langTagSelectLangClicked('[1]');">FROM EJS</a></li>
   </ul>
 </div>
